--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -12,7 +12,7 @@
               <h4><%= product.title %></h4>
               <%= sanitize(product.description) %>
               <%= number_to_currency(product.price) %>
-              <%= button_to 'Add to Cart', line_items_path(product_id: product) %></td>
+              <%= button_to 'Add to Cart', line_items_path(product_id: product), remote: true,class:"btn btn-success" %></td>
         </tr>
         </div>
       <% end %>
